syntax = "proto3";
package grpcmarket;

service MarketService {
  rpc GetUserSelectedItem(GetUserSelectedItemRequest) returns (GetUserSelectedItemResponse) {}
}

message GetUserSelectedItemRequest {
  string user_id = 1;
}

message GetUserSelectedItemResponse {
  string item_id = 1;
  int64 coins_day_price = 2;
}